# KernelForgeML

./: .gitignore  Cargo.toml  README.md  STATUS.md  setup-macos.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/autotune/: Cargo.toml
crates/autotune/src/: cache.rs  lib.rs  tuner.rs
crates/backend-cpu/: Cargo.toml
crates/backend-cpu/src/: lib.rs  planner.rs  runtime.rs
crates/backend-gpu/: Cargo.toml
crates/backend-gpu/src/: lib.rs  planner.rs  runtime.rs
crates/backend-gpu/src/shaders/: matmul.wgsl
crates/benchmarks/: Cargo.toml
crates/benchmarks/src/: main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: cli.rs  eval.rs  lib.rs  pipeline.rs  session.rs
crates/ir/: Cargo.toml
crates/ir/src/: builder.rs  dialect.rs  lib.rs  lowering.rs  passes.rs
crates/kernels/: Cargo.toml
crates/kernels/src/: attention.rs  config.rs  layernorm.rs  lib.rs  matmul.rs  registry.rs  utils.rs
crates/llm-inference/: Cargo.toml
crates/llm-inference/src/: cerebras.rs  config.rs  decoder.rs  kv_cache.rs  lib.rs  model.rs  rope.rs  tokenizer.rs  weights.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: knobs.rs  lib.rs  mutator.rs  optimizer.rs  plan.rs  report.rs  verifier.rs  workload.rs
docs/: architecture.md  cpu_profile.json  cpu_suite_report.json  gpu_profile.json  run_summary.md
scripts/: env.sh
tests/: pipeline.rs
