[workspace]
members = [
    "crates/ir",
    "crates/compiler",
    "crates/kernels",
    "crates/autotune",
    "crates/backend-cpu",
    "crates/backend-gpu",
    "crates/benchmarks",
    "crates/llm-inference",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
melior = "0.18"
once_cell = "1.19"
approx = "0.5"
