[package]
name = "kernelforge_autotune"
version = "0.1.0"
edition = "2021"
description = "Simple autotuning and kernel variant selection."

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
kernelforge_kernels = { path = "../kernels" }
