[package]
name = "kernelforge_backend_cpu"
version = "0.1.0"
edition = "2021"
description = "CPU backend implementations and runtime glue."

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
kernelforge_kernels = { path = "../kernels" }
kernelforge_autotune = { path = "../autotune" }
