[package]
name = "kernelforge_backend_gpu"
version = "0.1.0"
edition = "2021"
description = "GPU backend interface and reference implementation stubs."

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
kernelforge_kernels = { path = "../kernels" }
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
ndarray = { workspace = true }
