[package]
name = "kernelforge_llm"
version = "0.1.0"
edition = "2021"
description = "Minimal decoder-only LLM inference with KV-cache"

[dependencies]
anyhow = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
safetensors = "0.4"
fastrand = "2.0"
ndarray-rand = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
kernelforge_kernels = { path = "../kernels" }
