[package]
name = "kernelforge_optimizer"
version = "0.1.0"
edition = "2021"
description = "LLM-guided kernel optimizer with verification"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
fastrand = "2.0"
ureq = { version = "2.9", features = ["json"] }
kernelforge_ir = { path = "../ir" }
kernelforge_kernels = { path = "../kernels" }
kernelforge_backend_cpu = { path = "../backend-cpu" }
kernelforge_backend_gpu = { path = "../backend-gpu" }
